# lang_chain_experiments

./: README.md  pyproject.toml  requirements.txt
src/lang_chain_experiments/: __init__.py
src/lang_chain_experiments/extractors/fandom/: fandom_wiki_extractor.py  fandom_wiki_page.py
src/lang_chain_experiments/extractors/funtrivia/: funtrivia_extractor.py
src/open_ai_proxy/: open_ai_proxy.py  requiremments.txt  token_bucket.py
